[gd_scene load_steps=5 format=2]

[ext_resource path="res://asset/ui/loading/loading.gd" type="Script" id=1]
[ext_resource path="res://asset/ui/fonts/montserrat_eb_86.tres" type="DynamicFont" id=2]
[ext_resource path="res://asset/ui/background/bg.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "simple_loading"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.7, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "
Loading.
", "
Loading..
", "
Loading...
", "
Loading
" ]
}

[node name="loading" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="cloud_holder" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="TextureRect" parent="CanvasLayer"]
visible = false
modulate = Color( 0.76, 0.76, 0.76, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 200 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "
Loading
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="simple_timeout" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "simple_loading"
anims/simple_loading = SubResource( 1 )
[connection signal="timeout" from="simple_timeout" to="." method="_on_simple_timeout_timeout"]
